[package]
name = "alloy_benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
alloy.workspace = true
criterion.workspace = true
ethers.workspace = true
eyre.workspace = true
serde_json.workspace = true
tokio.workspace = true
ethabi = "18"
rlp = "0.6.1"
rlp-derive = "0.2.0"
alloy-rlp = "0.3.11"

[lib]
name = "alloy_benches"
path = "src/lib.rs"

[[bench]]
name = "abi_encoding"
harness = false

[[bench]]
name = "u256"
harness = false

[[bench]]
name = "json_abi"
harness = false

[[bench]]
name = "rlp"
harness = false
