[package]
name = "alloy_benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
alloy.workspace = true
criterion.workspace = true
ethers.workspace = true
eyre.workspace = true
serde_json.workspace = true
tokio.workspace = true
ethabi.workspace = true
rlp.workspace = true
rlp-derive.workspace = true
alloy-rlp.workspace = true
helpers.workspace = true

[[bench]]
name = "abi_encoding"
harness = false

[[bench]]
name = "u256"
harness = false

[[bench]]
name = "json_abi"
harness = false

[[bench]]
name = "rlp"
harness = false
