[package]
name = "examples-advanced"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-fork-db = "0.13"
alloy.workspace = true
ethers.workspace = true
alloy-evm = "0.7.2"

# reth
revm = { version = "23.1.0", default-features = false }
revm-primitives = { version = "19.0.0", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "55f4b0b" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "55f4b0b" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-types", rev = "55f4b0b" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", package = "reth-chainspec", rev = "55f4b0b" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum", rev = "55f4b0b" }

eyre.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }


[[bin]]
name = "alloy_profit"
path = "examples/uniswap_u256/alloy_profit.rs"

[[bin]]
name = "alloy_simulation"
path = "examples/uniswap_u256/alloy_simulation.rs"

[[bin]]
name = "ethers_profit"
path = "examples/uniswap_u256/ethers_profit.rs"

[lib]
name = "uniswap_u256"
path = "examples/uniswap_u256/lib.rs"
