[package]
name = "examples-advanced"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-fork-db.workspace = true
alloy.workspace = true
ethers.workspace = true
alloy-evm.workspace = true

# reth
revm = { workspace = true, default-features = false }

eyre.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true


[[bin]]
name = "alloy_profit"
path = "examples/uniswap_u256/alloy_profit.rs"

[[bin]]
name = "alloy_simulation"
path = "examples/uniswap_u256/alloy_simulation.rs"

[[bin]]
name = "ethers_profit"
path = "examples/uniswap_u256/ethers_profit.rs"

[lib]
name = "uniswap_u256"
path = "examples/uniswap_u256/lib.rs"
