[package]
name = "examples-advanced"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
foundry-fork-db.workspace = true
alloy.workspace = true
alloy-evm.workspace = true
helpers.workspace = true

# reth
revm = { workspace = true, default-features = false }

eyre.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
