[package]
name = "examples-comparison"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
alloy.workspace = true

chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
