[package]
name = "examples-layers"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["hyper"] }

eyre.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["retry"] }
http-body-util.workspace = true
tracing-subscriber.workspace = true
