[package]
name = "examples-providers"

publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dev-dependencies]
alloy-network.workspace = true
alloy-node-bindings.workspace = true
alloy-contract.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["pubsub", "ws"] }
alloy-pubsub.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-rpc-types.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-trace-types.workspace = true
alloy-signer-wallet.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-transport-ws.workspace = true
alloy-transport-ipc.workspace = true

eyre.workspace = true
futures-util = "0.3"
reqwest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
