[package]
name = "examples-providers"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
alloy.workspace = true
# Temp dependency fix to enable relevant features - Ref: https://github.com/alloy-rs/examples/pull/3#discussion_r1537842062
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "8acf6af", features = [
    "pubsub",
    "ipc",
    "ws",
] }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "8acf6af", features = [
    "pubsub",
    "ws",
    "ipc",
] }

alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "8acf6af" }

alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "8acf6af" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "8acf6af" }
eyre.workspace = true
futures-util = "0.3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
