[package]
name = "examples-subscriptions"

publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dev-dependencies]
alloy.workspace = true
# Temp fix for enabling features. Ref: https://github.com/alloy-rs/examples/pull/3/#discussion_r1537842062
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "f7333c4", features = [
    "pubsub",
    "ws",
] }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "f7333c4", features = [
    "pubsub",
] }
# alloy-contract.workspace = true
# alloy-network.workspace = true
# alloy-node-bindings.workspace = true
# alloy-provider = { workspace = true, features = ["pubsub", "ws"] }
# alloy-pubsub.workspace = true
# alloy-primitives.workspace = true
# alloy-rpc-client.workspace = true
# alloy-rpc-types.workspace = true
# alloy-sol-types = { workspace = true }

eyre.workspace = true
futures-util = "0.3"
reqwest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
