[package]
name = "examples-transactions"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["eip712"]}

eyre.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
