[package]
name = "examples-wallets"

publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dev-dependencies]
alloy.workspace = true

eyre.workspace = true
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
