[package]
name = "examples-wallets"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
alloy.workspace = true

aws-config = { version = "1.5", default-features = false }
aws-sdk-kms = { version = "1.47", default-features = false }
eyre.workspace = true
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
