[package]
name = "examples-wallets"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
alloy.workspace = true
alloy-chains.workspace = true

aws-config = { workspace = true, default-features = false }
aws-sdk-kms = { workspace = true, default-features = false }
eyre.workspace = true
gcloud-sdk = { workspace = true, features = [
    "google-cloud-kms-v1",
    "google-longrunning",
] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
